@@ -60,8 +60,8 @@ example, you could
 <li>
  jazz up our website. It is available from CVS: run
  <pre>
-  cvs -d:pserver:anoncvs@subversions.gnu.org:/cvsroot/lilypond login
-  cvs -z3 -d:pserver:anoncvs@subversions.gnu.org:/cvsroot/lilypond co newweb
+  cvs -d :ext:anoncvs@subversions.gnu.org:/cvsroot/lilypond login
+  cvs -z3 -d :ext:anoncvs@subversions.gnu.org:/cvsroot/lilypond co newweb
  </pre>
 </ul>
 
