@@ -4,7 +4,7 @@
 <ul>
 <li>
 Documentation for
-<a href="http://lilypond.org/doc/v2.0/Documentation/out-www/">
+<a href="doc/v2.0/Documentation/out-www/">
 <font size=+1>
 
 <b>LilyPond 2.0</b>
@@ -14,19 +14,19 @@ Documentation for
 
 <li>
 Documentation for
-<a href="http://lilypond.org/doc/v2.1/Documentation/out-www/">
+<a href="doc/v2.1/Documentation/out-www/">
 <b>LilyPond 2.1</b>
 </a>
 (latest development)
 
 <li>
 Documentation for
-<a href="http://lilypond.org/doc/v1.8/Documentation/out-www/">
+<a href="doc/v1.8/Documentation/out-www/">
 <b>LilyPond 1.8</b></a>
 
 <li>
 Documentation for
-<a href="http://lilypond.org/doc/v1.6/Documentation/out-www/">
+<a href="doc/v1.6/Documentation/out-www/">
 <font size=+0>
 <b>LilyPond 1.6</b></font></a>
 
